--- a/tourism/index.html
+++ b/tourism/index.html
@@ -23,8 +23,30 @@
 			</p>
 		</div>
 	</div>
-		<div class="box second"></div>
-		<div class="box third"></div>	
+	<div class="box second">
+		<div class="gallery-box">
+			<div class="gallery-text">
+				<p class="gallery-header">Gallery</p>
+				<p class="gallery-p">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sint impedit corporis quae iure dolorum expedita nostrum laudantium, nulla error.
+				</p>
+			</div>
+			<div class="img-box">
+				<img src="img/img21.jpg" alt="извините картинка в отпуске здесь были леса" class="img1">
+				<div class="wrapper">
+					<img src="img/img22.jpg" alt="извините картинка в отпуске здесь были леса" class="img2">
+				    <img src="img/img23.jpg" alt="извините картинка в отпуске здесь были леса" class="img3">
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	<div class="box third">
+		<div class="last-box">
+			<p class="last-header">Lorem ipsum.</p>
+			<p class="last-text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Ab aperiam eveniet, quaerat dolores iusto quisquam accusamus, ea, assumenda impedit quam perspiciatis id culpa facilis ipsam.</p>
+		</div>
+	</div>	
 	</main>
 </body>
 </html>
